Implement the Phat Contract to get all replies from a requested target account

--- a/se2-dapp/package.json
+++ b/se2-dapp/package.json
@@ -6,6 +6,7 @@
     "packages": [
       "packages/hardhat",
       "packages/nextjs",
+      "packages/phat",
       "packages/subgraph"
     ]
   },
