--- a/se2-dapp/packages/hardhat/package.json
+++ b/se2-dapp/packages/hardhat/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.1",
+    "@phala/solidity": "^0.0.4",
     "@typechain/ethers-v6": "^0.5.1",
     "dotenv": "^16.0.3",
     "envfile": "^6.18.0",
