--- a/packages/phat/package.json
+++ b/packages/phat/package.json
@@ -8,10 +8,10 @@
     "run-function": "phat-fn run dist/index.js",
     "localhost-watch": "phat-fn watch 0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512 ../hardhat/artifacts/contracts/YourContract.sol/YourContract.json ./dist/index.js -a '{\"apiUrl\": \"http://localhost:8000/subgraphs/name/scaffold-eth/your-contract\"}'",
     "create-profile": "phat-fn create-profile",
-    "test-deploy-function": "phat-fn upload --coreSettings=",
-    "main-deploy-function": "phat-fn upload --mode=production --coreSettings=",
-    "test-update-function": "phat-fn update",
-    "main-update-function": "phat-fn update --mode=production"
+    "test-deploy": "phat-fn upload",
+    "main-deploy": "phat-fn upload --mode=production --coreSettings=",
+    "test-update": "phat-fn update",
+    "main-update": "phat-fn update --mode=production"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
