--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -12,7 +12,8 @@
     "lint-staged": "eslint --config ./.eslintrc.json --ignore-path ./.eslintignore",
     "test": "REPORT_GAS=true hardhat test --network hardhat",
     "verify": "hardhat etherscan-verify",
-    "hardhat-verify": "hardhat verify"
+    "hardhat-verify": "hardhat verify",
+    "test-set-attestor": "hardhat run scripts/testSetAttestor.ts"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.7.0",
